yaml_parser/tests/fail/flow-sequence-with-invalid-extra-closing-bracket.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 13
  |
2 | [ a, b, c ] ]
  |             ^
expected `...`
